fix versioning